# svlopp

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dco_check.yml
scripts/: check_dco.sh
src/: cli.rs  control.rs  lib.rs  logging.rs  main.rs  service.rs  signalfd.rs  status.rs  timerfd.rs  utils.rs
tests/: conftest.py  constants.py
tests/helpers/: control_fifo.py  status_file.py  utils.py
tests/integration/: test_control.py  test_lifecycle.py  test_reload.py  test_service_termination.py
tests/integration/config/: test_args.py  test_env.py  test_log_file.py  test_on_exit.py  test_stop_signal.py  test_stop_timeout.py  test_working_dir.py
tests/integrations/: test_lifecycle.py  test_reload.py  test_service_termination.py
