[package]
name = "svlopp"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A lightweight, event-driven process supervisor for Linux built around a single epoll loop"
authors = ["Andrea Tedeschi <dontpanic.call0@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DontPanicO/svlopp.git"
keywords = ["supervisor", "init", "process", "linux"]
categories = ["os::linux-apis"]

[dependencies]
bitflags = "2.11.1"
libc = "0.2.184"
rustix = {version = "1.1.4", features = [
  "event",
  "process",
  "time",
  "pipe",
  "fs",
  "stdio",
  "runtime",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
